OpenNLP basic example

--- a/pom.xml
+++ b/pom.xml
@@ -5,10 +5,31 @@
 	<artifactId>tests-all</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<dependencies>
-		<dependency>
-			<groupId>org.apache.opennlp</groupId>
-			<artifactId>opennlp-tools</artifactId>
-			<version>1.5.3</version>
-		</dependency>
+		<!-- NLP -->
+        <dependency>
+            <groupId>org.apache.opennlp</groupId>
+            <artifactId>opennlp-tools</artifactId>
+            <version>1.5.3</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.opennlp</groupId>
+            <artifactId>opennlp-maxent</artifactId>
+            <version>3.0.3</version>
+        </dependency>
+        <dependency>
+            <groupId>org.cogroo</groupId>
+            <artifactId>cogroo-ann</artifactId>
+            <version>4.0.0</version>
+        </dependency>
+        <dependency>
+            <groupId>org.cogroo</groupId>
+            <artifactId>cogroo-nlp</artifactId>
+            <version>4.0.0</version>
+        </dependency>
+        <dependency>
+            <groupId>org.cogroo.lang.pt_br</groupId>
+            <artifactId>cogroo-res-pt_br</artifactId>
+            <version>4.0.0</version>
+        </dependency>
 	</dependencies>
 </project>
