--- a/pom.xml
+++ b/pom.xml
@@ -31,5 +31,10 @@
             <artifactId>cogroo-res-pt_br</artifactId>
             <version>4.0.0</version>
         </dependency>
+        <dependency>
+        	<groupId>org.apache.commons</groupId>
+        	<artifactId>commons-text</artifactId>
+        	<version>0.1-SNAPSHOT</version>
+        </dependency>
 	</dependencies>
 </project>
